Fix horizontal scrolling when content is too wide

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -11,7 +11,6 @@ body {
 }
 
 .App-Body {
-  padding: 0px 100px 100px 100px;
   flex-grow: 1;
   overflow-y: scroll;
 }
