--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -89,8 +89,8 @@ th {
   word-wrap: break-word;
   text-overflow: ellipsis;
   overflow: hidden;
-  white-space: nowrap;
   max-width: 770px;
+  min-width: auto;
 }
 
 .bugs-table .bug-alias {
